--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -94,6 +94,10 @@ sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-
 	"memory-tracker",
 ] }
 
+frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true }
+try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true }
+
+
 
 [dev-dependencies]
 futures = "0.3.9"
@@ -110,9 +114,15 @@ sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polk
 sc-consensus-babe =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 sc-consensus-epochs =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 
-
 [features]
 default = []
 runtime-benchmarks = [
 	"node-polkadex-runtime/runtime-benchmarks",
+]
+cli = [
+	'try-runtime-cli',
+]
+try-runtime = [
+	"node-polkadex-runtime/try-runtime",
+	"try-runtime-cli",
 ]
