refactor: Polkadex_Ido to polkadex-ido

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     'node',
     'runtime',
     'pallets/pdex-migration',
-    'pallets/Polkadex_Ido'
+    'pallets/polkadex-ido'
 ]
 
 
