--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -95,7 +95,7 @@ orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-modul
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'polkadot-v0.9.19', default-features = false }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
-polkadex-ido = { path = "../pallets/Polkadex_Ido", default-features = false }
+polkadex-ido = { path = "../pallets/polkadex-ido", default-features = false }
 
 # Try Runtime
 frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true, default-features = false }
