Added new AssetHandler Pallet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ members = [
     'node',
     'runtime',
     "pallets/pdex-migration",
-    "pallets/chainbridge"
+    "pallets/chainbridge",
+    "pallets/asset-handler"
 ]
 
 
