--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -52,7 +52,6 @@ pallet-election-provider-multi-phase = { default-features = false, git = "https:
 pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 pallet-child-bounties = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 
-#end added
 #frame
 frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
@@ -77,6 +76,8 @@ sp-inherents = { default-features = false, git = "https://github.com/paritytech/
 sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 frame-election-provider-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
+pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
+pallet-assets = { default-features = false, branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
 #end added
 
 # Used for the node template's RPCs
@@ -94,6 +95,7 @@ orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-modul
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'polkadot-v0.9.19', default-features = false }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
+polkadex-ido = { path = "../pallets/polkadex-ido", default-features = false }
 
 # Try Runtime
 frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true, default-features = false }
@@ -161,10 +163,12 @@ std = [
     'sp-transaction-pool/std',
     'sp-version/std',
     "sp-npos-elections/std",
+    'pallet-assets/std',
 
     "orml-vesting/std",
     "polkadex-primitives/std",
     "pdex-migration/std",
+    'polkadex-ido/std',
 
     "frame-try-runtime/std",
 ]
