--- a/pallets/asset-handler/Cargo.toml
+++ b/pallets/asset-handler/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 authors = ['Polkadex Authors']
-description = 'FRAME pallet for migrating ERC20 PDEX to Native PDEX'
+description = 'Pallet for Handling Assets from multiple Bridges'
 edition = '2021'
 homepage = 'https://polkadex.trade'
 name = 'asset-handler'
-version = '1.1.0'
+version = '1.0.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
