--- a/pallets/test-token-provider/Cargo.toml
+++ b/pallets/test-token-provider/Cargo.toml
@@ -27,6 +27,9 @@ sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkad
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19"}
+pallet-assets = { default-features = false, branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="polkadot-v0.9.19" , default-features = false }
+
 
 [features]
 default = ['std']
@@ -38,6 +41,7 @@ std = [
 	'sp-runtime/std',
 	'pallet-balances/std',
 	'pallet-sudo/std',
+	'pallet-assets/std'
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
