--- a/.github/workflows/build-ci-eks-deploy.yaml
+++ b/.github/workflows/build-ci-eks-deploy.yaml
@@ -58,7 +58,7 @@ jobs:
     needs:
       - start-runner 
       - buildbinary
-      - updatek8smanifests
+      #- updatek8smanifests
     runs-on: ubuntu-latest
     if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
     steps:
