--- a/.github/workflows/build-ci-eks-deploy.yaml
+++ b/.github/workflows/build-ci-eks-deploy.yaml
@@ -44,6 +44,8 @@ jobs:
             export PATH=/home/ubuntu/.cargo/bin/:$PATH
             echo $PATH
             ./scripts/init.sh
+            cargo clean
+            cargo update 
             cargo build --release 
             ./target/release/polkadex-node build-spec --disable-default-bootnode --chain udon > customSpec.json
             ./target/release/polkadex-node build-spec --chain=customSpec.json --raw --disable-default-bootnode > customSpecRaw.json
