--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -97,6 +97,9 @@ polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-pr
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
 polkadex-ido = { path = "../pallets/polkadex-ido", default-features = false }
 
+# Orderbook 
+pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false}
+
 # Try Runtime
 frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true, default-features = false }
 
