--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -96,6 +96,7 @@ orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-modul
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'polkadot-v0.9.19', default-features = false }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
 polkadex-ido = { path = "../pallets/polkadex-ido", default-features = false }
+test-token-provider = { path = "../pallets/test-token-provider", default-features = false }
 
 # Orderbook 
 pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false}
@@ -172,7 +173,6 @@ std = [
     "polkadex-primitives/std",
     "pdex-migration/std",
     'polkadex-ido/std',
-
     "frame-try-runtime/std",
 ]
 runtime-benchmarks = [
@@ -243,5 +243,6 @@ try-runtime = [
     "pallet-democracy/try-runtime",
     "pallet-utility/try-runtime",
     "orml-vesting/try-runtime",
-    "pdex-migration/try-runtime"
+    "pdex-migration/try-runtime",
+    "test-token-provider/try-runtime"
 ]
