--- a/client/thea/Cargo.toml
+++ b/client/thea/Cargo.toml
@@ -12,7 +12,7 @@ log = "0.4"
 parking_lot = "0.11"
 thiserror = "1.0"
 
-codec = { version = "3.0.0", package = "parity-scale-codec", features = ["derive"] }
+codec = { version = "=3.1.2", package = "parity-scale-codec", features = ["derive"] }
 prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch ="polkadot-v0.9.19" }
 frame-support = { branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate' }
 sp-io = { branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate' }
