--- a/client/thea/rpc/Cargo.toml
+++ b/client/thea/rpc/Cargo.toml
@@ -11,7 +11,7 @@ serde = { version = "1.0.132", features = ["derive"] }
 jsonrpc-core = "18.0.0"
 jsonrpc-core-client = "18.0.0"
 jsonrpc-derive = "18.0.0"
-codec = { version = "2.2.0", package = "parity-scale-codec", features = ["derive"] }
+codec = { version = "=3.1.2", package = "parity-scale-codec", features = ["derive"] }
 sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19"  }
 sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19"  }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19"  }
