--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -19,7 +19,7 @@ structopt = { version = "0.3.8", optional = true }
 [dependencies]
 # third-party dependencies
 jsonrpc-core = "18.0.0"
-codec = { package = "parity-scale-codec", version = "3.0.0" }
+codec = { package = "parity-scale-codec", version = "=3.1.2" }
 serde = { version = "1.0.136", features = ["derive"] }
 futures = { version = "0.3.9", features = ["compat"] }
 hex-literal = "0.3.1"
