--- a/pallets/polkadex-ido/Cargo.toml
+++ b/pallets/polkadex-ido/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
+codec = { version = "=3.1.2", package = "parity-scale-codec", default-features = false, features = ["derive"] }
 hex = { version = "2.1.0", package = "rustc-hex", default-features = false }
 serde = { version = "1.0.127", optional = true }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
