--- a/pallets/polkadex-ido/rpc/Cargo.toml
+++ b/pallets/polkadex-ido/rpc/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
+codec = { version = "=3.1.2", package = "parity-scale-codec", default-features = false, features = ["derive"] }
 serde = { version = "1.0.68", optional = true }
 jsonrpc-core = "18.0.0"
 jsonrpc-core-client = "18.0.0"
