--- a/pallets/polkadex-ido/Cargo.toml
+++ b/pallets/polkadex-ido/Cargo.toml
@@ -51,10 +51,10 @@ std = [
     "pallet-assets/std"
 ]
 
-runtime-benchmarks = [
-	"frame-benchmarking",
-	"frame-system/runtime-benchmarks",
-	"frame-support/runtime-benchmarks",
-	"sp-runtime/runtime-benchmarks",
-]
+#runtime-benchmarks = [
+#	"frame-benchmarking",
+#	"frame-system/runtime-benchmarks",
+#	"frame-support/runtime-benchmarks",
+#	"sp-runtime/runtime-benchmarks",
+#]
 try-runtime = ["frame-support/try-runtime"]
