--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -48,5 +48,5 @@ std = [
     "sp-core/std",
     "polkadex-primitives/std"
 ]
-runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
+#runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
 try-runtime = ["frame-support/try-runtime"]
