--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [profile.release]
-panic = 'unwind'
+panic = "unwind"
 
 [workspace]
 members = [
-    'node',
-    'runtime',
+    "node",
+    "runtime",
     "pallets/pdex-migration",
     "pallets/chainbridge",
     "pallets/asset-handler",
-    'pallets/pdex-migration',
-    'pallets/polkadex-ido',
-    'pallets/ocex',
-    'pallets/test-token-provider'
+    "pallets/pdex-migration",
+    "pallets/polkadex-ido",
+    "pallets/ocex",
+    "pallets/test-token-provider"
 ]
 
 
