--- a/pallets/pdex-migration/Cargo.toml
+++ b/pallets/pdex-migration/Cargo.toml
@@ -40,6 +40,7 @@ std = [
 	'pallet-sudo/std',
 	'rand/std'
 ]
+#TODO: [#463] Currently broken, will be fixed in different issue
 #runtime-benchmarks = [
 #    "frame-benchmarking",
 #    'frame-support/runtime-benchmarks',
