--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -17,8 +17,6 @@ hex-literal = { version = "0.3.3", optional = true }
 static_assertions = "1.1.0"
 log = { version = "0.4.14", default-features = false }
 smallvec = "1.6.1"
-#pallets
-#added
 pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 pallet-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
@@ -82,7 +80,7 @@ pallet-conviction-voting= { default-features = false, git = "https://github.com/
 pallet-referenda = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", optional = true }
 #end added
 
-# Used for the node template's RPCs
+# Used for the node template"s RPCs
 frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
 
 # Used for runtime benchmarking
@@ -96,7 +94,7 @@ pallet-society = { default-features = false, git = "https://github.com/paritytec
 orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", branch="polkadot-v0.9.19", default-features = false }
 
 # Local Dependecies
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'polkadot-v0.9.19', default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = "polkadot-v0.9.19", default-features = false }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
 chainbridge = { path = "../pallets/chainbridge", default-features = false }
 asset-handler = { path = "../pallets/asset-handler", default-features = false }
@@ -122,67 +120,67 @@ pallet-society = { default-features = false, git = "https://github.com/paritytec
 [features]
 default = ["std"]
 std = [
-    'codec/std',
-    'log/std',
-    'frame-executive/std',
-    'frame-support/std',
-    'frame-system/std',
-    'frame-system-rpc-runtime-api/std',
-    'pallet-authorship/std',
-    'pallet-babe/std',
-    'pallet-balances/std',
-    'pallet-grandpa/std',
-    'pallet-im-online/std',
-    'pallet-offences/std',
-    'pallet-session/std',
-    'pallet-staking/std',
-    'pallet-preimage/std',
-    'pallet-bags-list/std',
-    'pallet-authority-discovery/std',
-    'pallet-multisig/std',
-    'pallet-sudo/std',
-    'pallet-indices/std',
-    'pallet-child-bounties/std',
-    'pallet-identity/std',
-    'pallet-proxy/std',
-    'pallet-recovery/std',
-    'pallet-democracy/std',
-    'pallet-utility/std',
+    "codec/std",
+    "log/std",
+    "frame-executive/std",
+    "frame-support/std",
+    "frame-system/std",
+    "frame-system-rpc-runtime-api/std",
+    "pallet-authorship/std",
+    "pallet-babe/std",
+    "pallet-balances/std",
+    "pallet-grandpa/std",
+    "pallet-im-online/std",
+    "pallet-offences/std",
+    "pallet-session/std",
+    "pallet-staking/std",
+    "pallet-preimage/std",
+    "pallet-bags-list/std",
+    "pallet-authority-discovery/std",
+    "pallet-multisig/std",
+    "pallet-sudo/std",
+    "pallet-indices/std",
+    "pallet-child-bounties/std",
+    "pallet-identity/std",
+    "pallet-proxy/std",
+    "pallet-recovery/std",
+    "pallet-democracy/std",
+    "pallet-utility/std",
     "pallet-bounties/std",
-    'pallet-tips/std',
-    'pallet-timestamp/std',
-    'pallet-transaction-payment/std',
-    'pallet-transaction-payment-rpc-runtime-api/std',
-    'pallet-treasury/std',
-    'pallet-collective/std',
-    'pallet-elections-phragmen/std',
-    'frame-election-provider-support/std',
-    'pallet-membership/std',
-    'pallet-scheduler/std',
+    "pallet-tips/std",
+    "pallet-timestamp/std",
+    "pallet-transaction-payment/std",
+    "pallet-transaction-payment-rpc-runtime-api/std",
+    "pallet-treasury/std",
+    "pallet-collective/std",
+    "pallet-elections-phragmen/std",
+    "frame-election-provider-support/std",
+    "pallet-membership/std",
+    "pallet-scheduler/std",
     "pallet-election-provider-multi-phase/std",
-    'sp-api/std',
-    'sp-block-builder/std',
-    'sp-consensus-babe/std',
-    'sp-core/std',
-    'sp-inherents/std',
-    'sp-offchain/std',
-    'sp-runtime/std',
-    'sp-session/std',
-    'sp-staking/std',
-    'sp-std/std',
-    'sp-transaction-pool/std',
-    'sp-version/std',
+    "sp-api/std",
+    "sp-block-builder/std",
+    "sp-consensus-babe/std",
+    "sp-core/std",
+    "sp-inherents/std",
+    "sp-offchain/std",
+    "sp-runtime/std",
+    "sp-session/std",
+    "sp-staking/std",
+    "sp-std/std",
+    "sp-transaction-pool/std",
+    "sp-version/std",
     "sp-npos-elections/std",
-    'pallet-assets/std',
+    "pallet-assets/std",
     "orml-vesting/std",
     "polkadex-primitives/std",
     "pdex-migration/std",
-    'polkadex-ido/std',
-    'frame-try-runtime/std',
-    'chainbridge/std',
-    'asset-handler/std',
-    'test-token-provider/std',
-    'pallet-ocex-lmp/std'
+    "polkadex-ido/std",
+    "frame-try-runtime/std",
+    "chainbridge/std",
+    "asset-handler/std",
+    "test-token-provider/std",
+    "pallet-ocex-lmp/std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
@@ -207,7 +205,7 @@ runtime-benchmarks = [
     "pallet-multisig/runtime-benchmarks",
     "pallet-proxy/runtime-benchmarks",
     "pallet-scheduler/runtime-benchmarks",
-    'pallet-society/runtime-benchmarks',
+    "pallet-society/runtime-benchmarks",
     "pallet-staking/runtime-benchmarks",
     "pallet-timestamp/runtime-benchmarks",
     "pallet-tips/runtime-benchmarks",
@@ -247,7 +245,7 @@ try-runtime = [
     "pallet-multisig/try-runtime",
     "pallet-proxy/try-runtime",
     "pallet-scheduler/try-runtime",
-    'pallet-society/try-runtime',
+    "pallet-society/try-runtime",
     "pallet-staking/try-runtime",
     "pallet-timestamp/try-runtime",
     "pallet-tips/try-runtime",
