--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -94,6 +94,7 @@ orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-modul
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'polkadot-v0.9.19', default-features = false }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
+pallet-assets = { path = "../pallets/assets", default-features = false }
 
 # Try Runtime
 frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true, default-features = false }
@@ -165,6 +166,7 @@ std = [
     "orml-vesting/std",
     "polkadex-primitives/std",
     "pdex-migration/std",
+    "pallet-assets/std",
 
     "frame-try-runtime/std",
 ]
@@ -202,7 +204,8 @@ runtime-benchmarks = [
     "orml-vesting/runtime-benchmarks",
     "hex-literal",
     "frame-election-provider-support/runtime-benchmarks",
-    "pdex-migration/runtime-benchmarks"
+    "pdex-migration/runtime-benchmarks",
+    "pallet-assets/std"
 ]
 
 
@@ -236,5 +239,6 @@ try-runtime = [
     "pallet-democracy/try-runtime",
     "pallet-utility/try-runtime",
     "orml-vesting/try-runtime",
-    "pdex-migration/try-runtime"
+    "pdex-migration/try-runtime",
+    "pallet-assets/try-runtime"
 ]
