--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -107,6 +107,7 @@ pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false}
 frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", optional = true, default-features = false }
 
 polkadex-ido-runtime-api = {path = "../pallets/polkadex-ido/rpc/runtime-api", default-features = false}
+pallet-ocex-lmp-runtime-api = {path = "../pallets/ocex/rpc/runtime-api", default-features = false}
 pallet-polkadex-ido-primitives = {path = "../pallets/polkadex-ido/common",  default-features = false} # Used for runtime benchmarking
 
 [build-dependencies]
