--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -31,6 +31,7 @@ itertools = "0.10.1"
 # local dependencies
 node-polkadex-runtime = { path = "../runtime", version = "3.0.0" }
 polkadex-ido-rpc = {path = "../pallets/polkadex-ido/rpc"}
+pallet-ocex-lmp-rpc = {path = "../pallets/ocex/rpc"}
 
 # Substrate dependencies
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
